--- a/pages/index.css
+++ b/pages/index.css
@@ -12,3 +12,10 @@
 @import url(../blocks/profile/__text/profile__text.css);
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
 @import url(../blocks/profile/__add-rename/profile__add-rename.css);
+@import url(../blocks/elements/elements.css);
+@import url(../blocks/element/element.css);
+@import url(../blocks/element/);
+@import url(../blocks/element/__image/element__image.css);
+@import url(../blocks/element/__info/element__info.css);
+@import url(../blocks/element/__text/element__text.css);
+@import url(../blocks/element/__like-buttom/element__like-buttom.css);
