--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -2,8 +2,10 @@
     width: 100%;
     padding-top: 26px;
     padding-bottom: 36px;
+    display: flex;
+    flex-wrap: wrap;
 }
-@media screen and (min-width: 880px) {
+@media screen and (min-width: 890px) {
     .profile__info{
         width: 336px;
         padding: 0;
