--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -6,6 +6,7 @@
     border: 0;
     padding: 0;
     margin-left: 10px;
+    margin-right: 14.5px;
     opacity: 1;
     transition-property: opacity;
     transition-duration: 0.2s;
@@ -20,5 +21,6 @@
         height: 24px;
         margin-left: 18px;
         background-size: contain;
+        margin-right: 0;
     }
 }
