--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -4,12 +4,15 @@
     padding-bottom: 36px;
     display: flex;
     flex-wrap: wrap;
+    justify-content: end;
+    align-items: center;
 }
 @media screen and (min-width: 890px) {
     .profile__info{
         width: 336px;
         padding: 0;
         margin-left: 30px;
-        margin-right: 244px;;
+        margin-right: 244px;
+        justify-content: start;
     }
 }
