--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,4 +1,5 @@
 .profile__name{
+    width: 189px;
     box-sizing: border-box;
     font-family: Inter, Arial, Helvetica, sans-serif;
     font-style: normal;
@@ -7,10 +8,11 @@
     line-height: 33px;
     text-align: center;
     color: #FFFFFF;
-    margin: 0 auto;
+    margin: 0;
 }
 @media screen and (min-width: 890px) {
     .profile__name{
+        width: 294px;
         font-size: 42px;
         line-height: 48px;
         text-align: start;
