--- a/blocks/profile/__text/profile__text.css
+++ b/blocks/profile/__text/profile__text.css
@@ -12,6 +12,6 @@
 @media screen and (min-width: 890px) {
     .profile__text{
         padding-top: 16px;
-        text-align: start;
+        margin: 0;
     }
 }
