--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -23,9 +23,9 @@
         padding-left: 30px;
     }
 }
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1024px) {
     .footer__copyright{
-        padding-right: 762px;
-        padding-left: 200px;
+        padding-right: 562px;
+        padding-left: 0;
     }
 }
