--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,6 @@
 .header{
     width: 100%;
-    padding-tOP: 28px;
+    padding-top: 28px;
     max-width: 880px;
 }
 @media screen and (min-width: 890px) {
