--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,7 +1,7 @@
 .popup__input{
     width: 100%;
     padding: 0;
-    padding-bottom: 13px;;
+    padding-bottom: 13px;
     border: 0;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     box-sizing: border-box;
