--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,4 +1,10 @@
 .popup__close{
+    background-image: url(../../../images/close.svg);
+    width: 20px;
+    height: 20px;
+    background-color: transparent;
+    padding: 0;
+    border: 0;
     position: absolute;
     top: -26px;
     right: 0;
@@ -17,5 +23,7 @@
         height: 32px;
         top: -40px;
         right:-40px;
+        background-repeat: no-repeat;
+        background-size: cover;
     }
 }
