--- a/Font/inter/inter.css
+++ b/Font/inter/inter.css
@@ -6,14 +6,6 @@
   src: url(./Inter-Regular.woff2) format("woff2"),
        url(./Inter-Regular.woff) format("woff");
 }
-@font-face {
-  font-family: 'Inter';
-  font-style:  normal;
-  font-weight: 700;
-  font-display: swap;
-  src: url(./Inter-Bold.woff2) format("woff2"),
-       url(./Inter-Bold.woff) format("woff");
-}
 
 @font-face {
   font-family: 'Inter';
@@ -22,4 +14,12 @@
   font-display: swap;
   src: url(./Inter-Black.woff2) format("woff2"),
        url(./Inter-Black.woff) format("woff");
+}
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url(./Inter-Medium.woff2) format("woff2"),
+       url(./Inter-Medium.woff) format("woff");
 }
