--- a/blocks/element/__like-buttom/element__like-button.css
+++ b/blocks/element/__like-buttom/element__like-button.css
@@ -1,4 +1,4 @@
-.element__like-buttom{
+.element__like-button{
     background-image: url(../../../images/like.svg);
     width: 22px;
     height: 19px;
@@ -10,6 +10,6 @@
     transition-duration: 0.2s;
     transition-timing-function: linear;
 }
-.element__like-buttom:hover{
-    opacity: 0.6;
+.element__like-button:hover{
+    opacity: 0.5;
 }
