--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,19 +1,7 @@
-.elements{
+.element{
     width: 282px;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, 282px);
-    gap: 20px;
-}
-@media screen and (min-width: 590px) {
-    .elements{
-        width: 583px;
-        gap: 17px;
-    }
-}
-@media screen and (min-width: 890px) {
-    .elements{
-        width: 880px;
-        gap: 17px, 20px;
-    }
+    background-color: #fff;
+    border-radius: 10px;
+    margin: 0;
+    padding: 0;
 }
