--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,7 +1,19 @@
-.element{
+.elements{
     width: 282px;
-    background-color: #fff;
-    border-radius: 10px;
-    margin: 0;
-    padding: 0;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 282px);
+    gap: 20px;
+}
+@media screen and (min-width: 590px) {
+    .elements{
+        width: 583px;
+        gap: 17px;
+    }
+}
+@media screen and (min-width: 890px) {
+    .elements{
+        width: 880px;
+        gap: 20px 17px;
+    }
 }
