--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -7,6 +7,7 @@
 }
 @media screen and (min-width: 890px) {
     .header__logo{
+        background-image: url(../../../images/logo-890px.svg);
         width: 142px;
         height: 33px;
         margin-left: 0;
