--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -6,7 +6,7 @@
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     box-sizing: border-box;
     margin-top: 30px;
-    font-family: Inter;
+    font-family: Inter, Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
