--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -4,7 +4,7 @@
     margin-top: 45px;
     margin-bottom: 25px;
     background-color: #000;
-    font-family: Inter;
+    font-family: Inter, Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
