--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -6,6 +6,7 @@
     right: 0;
     justify-content: center;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+    background-color: rgba(0, 0, 0, 0.5);
     display: none;
 }
