--- a/pages/index.css
+++ b/pages/index.css
@@ -1,9 +1,8 @@
 @import url(../vendor/normalize.css);
-@import url(../Font/inter/inter.css);
+@import url(../fonts/inter/inter.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
-@import url(../blocks/header/__line/header__line.css);
 @import url(../blocks/content/content.css);
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
@@ -17,7 +16,7 @@
 @import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/element/__info/element__info.css);
 @import url(../blocks/element/__text/element__text.css);
-@import url(../blocks/element/__like-buttom/element__like-buttom.css);
+@import url(../blocks/element/__like-buttom/element__like-button.css);
 @import url(../blocks/element/__like-buttom/_active/element__like-button_active.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
