--- a/blocks/element/__trash/element__trash.css
+++ b/blocks/element/__trash/element__trash.css
@@ -1,15 +1,19 @@
-.element__like-button_active{
-    background-image: url(../../../../images/like_active.svg);
-    width: 22px;
+.element__trash{
+    background-image: url(../../../images/trash.svg);
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 18px;
     height: 19px;
-    background-repeat: no-repeat;
+    padding: 0;
     border: 0;
+    margin: 0;
     background-color: transparent;
     opacity: 1;
     transition-property: opacity;
     transition-duration: 0.2s;
     transition-timing-function: linear;
 }
-.element__like-button_active:hover{
+.element__trash:hover{
     opacity: 0.6;
 }
