--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,4 +1,5 @@
 .popup{
+    display: flex;
     position: fixed;
     top: 0;
     bottom: 0;
@@ -8,5 +9,7 @@
     align-items: center;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     background-color: rgba(0, 0, 0, 0.5);
-    display: none;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0.5s, height, opacity 0.5s ease-in-out;
 }
