--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,5 +1,6 @@
 .elements{
     width: 282px;
+    min-height: 20vh;
     margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(auto-fit, 282px);
