--- a/blocks/popup/__error/popup__error.css
+++ b/blocks/popup/__error/popup__error.css
@@ -1,4 +1,9 @@
 .popup__error{
+    display: inline-block;
+    width: 358px;
+    min-height: 25px;
+    padding: 0;
+    margin: 0;
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
