--- a/blocks/popup/__error/popup__error.css
+++ b/blocks/popup/__error/popup__error.css
@@ -1,6 +1,6 @@
 .popup__error{
     display: inline-block;
-    width: 358px;
+    width: 250px;
     min-height: 25px;
     padding: 0;
     margin: 0;
@@ -10,4 +10,9 @@
     font-size: 12px;
     line-height: 15px;
     color: #FF0000;
+}
+@media screen and (min-width: 1024px) {
+    .popup__error{
+    width: 358px; 
+    }   
 }
