--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: column;
     min-height: 286px;
+    position: relative;
 }
 @media screen and (min-width: 890px) {
     .profile{
