--- a/src/blocks/profile/__avatar-button/profile__avatar-button.css
+++ b/src/blocks/profile/__avatar-button/profile__avatar-button.css
@@ -1,13 +1,19 @@
 .profile__avatar-button{
-    position: absolute;
-    left: 81px;
-    width: 120px;
-    height: 120px;
+    display: flex;
+    position: relative;
+    margin: 0 auto;
+    padding: 0;
+    opacity: 1;
+    transition-property: opacity;
+    transition-duration: 0.2s;
+    transition-timing-function: linear;
     border-radius: 50%;
-    border: 1px solid red;
     cursor: pointer;
 }
-.profile__avatar-button:hover{
-    cursor: pointer;
-    opacity: 0;
+.profile__avatar-button:hover .profile__edit-avatar{
+    opacity: 1;
+    visibility: visible;
+}
+.profile__avatar-button:hover .profile__avatar{
+    opacity: 0.8;   
 }
